# Tensorium-simd2gpu

./: CMakeLists.txt  README.md
Tensorium-opt/: CmakeLists.txt  Tensorium-opt.cpp
cmake/modules/: sanitizers.cmake
include/: CMakeLists.txt
include/Tensorium/: CMakeLists.txt  TensoriumDialect.h  TensoriumDialect.td  TensoriumOps.h  TensoriumOps.td
include/TensoriumSIMD2GPU/: RegisterPasses.hpp
lib/: CMakeLists.txt
lib/CompilerHandler/: CMakeLists.txt
lib/CompilerHandler/Backend/: CMakeLists.txt  DumpTensoriumGpuFuncs.cpp
lib/CompilerHandler/Frontend/: CMakeLists.txt  PragmaHandler.cpp  PragmaHandler.h
lib/Passes/: AVXToSIMTPass.cpp  RegisterPasses.cpp
lib/Tensorium/: CMakeLists.txt  TensoriumDialect.cpp  TensoriumOps.cpp
lib/Tensorium/Affine/: AffineUnroll.cpp  AffineUnroll.h  CMakeLists.txt
test/: CMakeLists.txt  buildtest.sh  lit.cfg.py  lit.site.cfg.py.in
test/CompilerHandler/: PragmaTest.cpp
test/Tensorium/: add_runtime.mlir  foo.mlir  test_affine.mlir
test/tensorium_export/: bar_tensorium_gpu.mlir  baz_tensorium_gpu.mlir  compute_energy_tensorium_gpu.mlir  foo_gpu.ll  foo_tensorium_gpu.mlir  kernel.mlir  overloaded_tensorium_gpu.mlir  proto_func_tensorium_gpu.mlir  qux_tensorium_gpu.mlir  staticfunc_tensorium_gpu.mlir  test_simd_intrinsic_tensorium_gpu.mlir
